--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 ul li a {
   font-size: 25px;
   text-transform: capitalize;
-  color: black;
+  color: rgb(26, 26, 26);
 }
 span {
   color: white;
