--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 .imeg {
   width: 100px;
   height: 60px;
@@ -370,11 +371,13 @@ p {
   .footer .boxs {
     display: flex;
   flex-direction: column;
+  text-align: center;
 
   }}
   @media(max-width: 750px){
     .social{
       width: auto;
     }
+  
   }
 
